--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <head>
 <script src="/assets/jquery.js"></script>
-<link href='https://fonts.googleapis.com/css?family=Londrina+Shadow' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
 <style>
 body {
   font-family: helvetica, sans-serif;
@@ -18,7 +18,7 @@ div {
   border-radius: 12px;
 }
 h1 {
-  font-family: 'Londrina Shadow', cursive;
+ font-family: 'Great Vibes', cursive;
   text-align: center;
   font-size: 75px;
   color: #aaaaaa;
