--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ body {
   font-family: helvetica, sans-serif;
   margin: 0 auto;
   max-width: 600px;
-  background: #232323;
+  background: url("http://thumbs.dreamstime.com/z/silver-christmas-background-shiny-bright-bokeh-34923741.jpg");
 }
 div {
   height: 400px;
